@@ -10,7 +10,7 @@
 #define _{type}
 
 
-#if defined(PORT_HOST) || defined(SDCC_z80) || defined(SDCC_gbz80)
+#if defined(PORT_HOST) || defined(SDCC_z80) || defined(SDCC_gbz80) || defined(SDCC_hc08)
 #  define NO_BIT_TYPE
 #endif
 
@@ -32,10 +32,10 @@
 #elif defined(_long)
 #  define MASK 0xffffffff
 #else
-#  warning Unknow type
+#  warning Unknown type
 #endif
 
-#if defined(PORT_HOST) || defined(SDCC_z80) || defined(SDCC_gbz80)
+#if defined(PORT_HOST) || defined(SDCC_z80) || defined(SDCC_gbz80) || defined(SDCC_hc08)
 #  define idata
 #  define code
 #endif
